- make stuff appear on scroll

--- a/src/index.njk
+++ b/src/index.njk
@@ -23,51 +23,51 @@ title: Luft & Liebe
   </div>
 </header>
 <main class="main">
-  <section class="concept section section--padded">
+  <section id="js-concept" class="concept section section--padded">
     <div class="wrapper--text">
       <div id="js-logo" class="logo">
         {% include "logo.svg" %}
       </div>
-      <div class="main-act">
+      <div class="main-act js-io enter appear--bottom">
         <time class="main-act__date" datetime="">
           {% include 'datum.svg' %}
         </time>
       </div>
-      <p class="first-letter">5 Tage ausgelassen feiern, hoch oben auf dem Vigiljoch. Eine Auszeit nehmen vom Trubel des Alltags, etwas Bergluft schnuppern und mit uns am Samstag unsere Liebe zelebrieren. (Fast) alle unter einem Dach, ganz unkompliziert locker flockig erwarten wir euch ab Donnerstag Nachmittag im Ferienheim Vigiljoch, denn wir feiern ein Fest(ival) und freuen uns, dass du dabei bist und vielleicht auch etwas beitragen möchtest.</p>
+      <p class="first-letter js-io enter appear--bottom">5 Tage ausgelassen feiern, hoch oben auf dem Vigiljoch. Eine Auszeit nehmen vom Trubel des Alltags, etwas Bergluft schnuppern und mit uns am Samstag unsere Liebe zelebrieren. (Fast) alle unter einem Dach, ganz unkompliziert locker flockig erwarten wir euch ab Donnerstag Nachmittag im Ferienheim Vigiljoch, denn wir feiern ein Fest(ival) und freuen uns, dass du dabei bist und vielleicht auch etwas beitragen möchtest.</p>
       <div class="registration">
         <a href="https://forms.gle/VCB9XgttZK9w6WWn7" target="_blank" class="btn btn--primary">Als Gast registrieren</a>
       </div>
     </div>
-    <div class="wrapper--text section--padded">
+    <div class="wrapper--text section--padded js-io enter appear--bottom">
       {% include "divider.svg" %}
     </div>
     <div class="wrapper--text">
-      <div class="section__header">
+      <div class="section__header js-io enter appear--bottom">
         <h2 class="section__subtitle h5">TL;DR</h2>
         <div class="section__title h2">Die wichtigsten Infos</div>
       </div>
       <dl class="tldr__items">
-        <dt class="tldr__title">Zeitraum</dt>
-        <dd class="tldr__desc">Do, 25. bis Mo, 29. Juni 2020</dd>
-        <dt class="tldr__title">Freie Trauung</dt>
-        <dd class="tldr__desc">Sa. 27. Juni 2020</dd>
-        <dt class="tldr__title">Location</dt>
-        <dd class="tldr__desc"><a href="https://goo.gl/maps/oBqMdVD3QghJKt5g8" target="_blank">{% include "i--map.svg" %}&nbsp;Ferienheim Vigiljoch</a>, Südtirol, Italien auf knapp 1.800&nbsp;Höhenmetern(!)</dd>
-        <dt class="tldr__title">Anreise</dt>
-        <dd class="tldr__desc">Ihr müsst bis nach <a href="https://goo.gl/maps/bfXvknN99fhf5jwCA" target="_blank">{% include "i--map.svg" %}&nbsp;Lana</a>, dann mit der Schwebebahn den Berg hoch und mit dem Sessellift oder zu Fuß (ca. 50min) bis zum Ferienheim.</dd>
-        <dt class="tldr__title">Schlafen</dt>
-        <dd class="tldr__desc">Ganz spartanisch im Ferienheim oder komfortabel auf der <br><a href="https://goo.gl/maps/N3EmK4wzJ93VhkbDA" target="_blank">{%include "i--map.svg"%}&nbsp;Family&nbsp;Alm&nbsp;Gampl</a></dd>
-        <dt class="tldr__title">Nicht vergessen</dt>
-        <dd class="tldr__desc"><a href="https://forms.gle/VCB9XgttZK9w6WWn7" target="_blank">Registrieren!</a> Danke :)</dd>
+        <dt class="tldr__title js-io enter appear--bottom">Zeitraum</dt>
+        <dd class="tldr__desc js-io enter appear--bottom">Do, 25. bis Mo, 29. Juni 2020</dd>
+        <dt class="tldr__title js-io enter appear--bottom">Freie Trauung</dt>
+        <dd class="tldr__desc js-io enter appear--bottom">Sa. 27. Juni 2020</dd>
+        <dt class="tldr__title js-io enter appear--bottom">Location</dt>
+        <dd class="tldr__desc js-io enter appear--bottom"><a href="https://goo.gl/maps/oBqMdVD3QghJKt5g8" target="_blank">{% include "i--map.svg" %}&nbsp;Ferienheim Vigiljoch</a>, Südtirol, Italien auf knapp 1.800&nbsp;Höhenmetern(!)</dd>
+        <dt class="tldr__title js-io enter appear--bottom">Anreise</dt>
+        <dd class="tldr__desc js-io enter appear--bottom">Ihr müsst bis nach <a href="https://goo.gl/maps/bfXvknN99fhf5jwCA" target="_blank">{% include "i--map.svg" %}&nbsp;Lana</a>, dann mit der Schwebebahn den Berg hoch und mit dem Sessellift oder zu Fuß (ca. 50min) bis zum Ferienheim.</dd>
+        <dt class="tldr__title js-io enter appear--bottom">Schlafen</dt>
+        <dd class="tldr__desc js-io enter appear--bottom">Ganz spartanisch im Ferienheim oder komfortabel auf der <br><a href="https://goo.gl/maps/N3EmK4wzJ93VhkbDA" target="_blank">{%include "i--map.svg"%}&nbsp;Family&nbsp;Alm&nbsp;Gampl</a></dd>
+        <dt class="tldr__title js-io enter appear--bottom">Nicht vergessen</dt>
+        <dd class="tldr__desc js-io enter appear--bottom"><a href="https://forms.gle/VCB9XgttZK9w6WWn7" target="_blank">Registrieren!</a> Danke :)</dd>
       </dl>
     </div>
   </section>
-  <section class="approach section section--alt section--padded">
-    <div class="wrapper--text">
+  <section id="js-approach" class="approach section section--alt section--padded js-io">
+    <div class="wrapper--text js-io enter appear--bottom">
       <h2>Anfahrt nach Südtirol</h2>
       <p>Wir sind uns bewusst, dass die Anreise nach Südtirol nicht die einfachste ist und wollen sie euch so angenehm wie möglich machen. Solltet ihr Schwierigkeiten haben um von A nach B zu kommen oder habt noch einen Platz im Auto frei, den ihr vergeben möchtet, dann gebt uns bitte Bescheid - wir finden für alles eine Lösung!</p>
     </div>
-    <div class="img-overlay">
+    <div class="img-overlay js-io enter appear--bottom">
       <div class="img-overlay__img">
         <img class="map map--is-visible" data-type="car" src="images/map--europe--car.jpg" alt="Eine handgezeichnete Landkarte Europas, die Autorouten nach Vigiljoch zeigt.">
         <img class="map" data-type="plane" src="images/map--europe--plane.jpg" alt="Eine handgezeichnete Landkarte Europas, die Flugrouten nach Vigiljoch zeigt.">
@@ -118,7 +118,7 @@ title: Luft & Liebe
   </section>
   <section class="section">
     <div class="quote">
-      <blockquote class="quote__text">
+      <blockquote class="quote__text js-io enter appear--bottom">
         Die Liebe allein versteht das Geheimnis, andere zu beschenken und dabei selbst reich zu werden.
         <cite class="quote__author">
           &mdash; Clemens Brentano
@@ -127,11 +127,11 @@ title: Luft & Liebe
     </div>
   </section>
   <section class="hike section section--padded">
-    <div class="section__header wrapper--text">
+    <div class="section__header wrapper--text js-io enter appear--bottom">
       <h2 class="section__subtitle h5">Der Weg zum Ferienheim</h2>
       <div class="section__title h2">Wo wir uns treffen</div>
     </div>
-    <a class="img-link" title="Bild öffnen" href="images/map--vigiljoch--anreise.jpg">
+    <a class="img-link js-io enter appear--bottom" title="Bild öffnen" href="images/map--vigiljoch--anreise.jpg">
       <figure class="hoverlay">
         <img class="" src="images/map--vigiljoch--anreise.jpg" alt="Eine handgezeichnete Landkarte, die das Gebiet des Vigiljoch zeigt.">
         <div class="hoverlay__overlay">
@@ -139,74 +139,74 @@ title: Luft & Liebe
         </div>
       </figure>
     </a>
-    <div class="wrapper--text">
+    <div class="wrapper--text js-io enter appear--bottom">
       <p>Jetzt wird es abenteuerlich! Euch erwartet eine kurze Fahrt mit der Schwebeseilbahn von 328 auf 1486 Höhenmetern. Danach entscheidet ihr selbst - entweder eine knapp einstündige Wanderung hoch zum Ferienheim oder etwas bequemer mit dem Sessellift und nur einem kleinen Fußmarsch von 15 Minuten. Belohnt werdet ihr bei beiden Varianten mit herrlichen Ausblicken auf 1747 Metern über dem Meeresspiegel.</p>
     </div>
   </section>
-  <div class="wrapper--text">
+  <div class="wrapper--text js-io enter appear--bottom">
     {% include "divider.svg" %}
   </div>
   <section class="accommodation section--padded">
-    <div class="section__header wrapper--text">
+    <div class="section__header wrapper--text js-io enter appear--bottom">
       <h2 class="section__subtitle h5">Die Unterkünfte</h2>
       <div class="section__title h2">Wo ihr schlafen könnt</div>
     </div>
     <div class="ferienheim">
-      <div class="accommodation__header accommodation__header--ferienheim wrapper--text">
+      <div class="accommodation__header accommodation__header--ferienheim wrapper--text js-io enter appear--bottom">
         <h3 class="accommodation__title">Ferienheim</h3>
         <h4 class="accommodation__subtitle h5">Bettenlager</h4>
       </div>
-      <img class="ferienheim__img" src="images/foto--ferienheim.jpg" alt="Ein Foto des Ferienheims in Vigiljoch.">
-      <div class="ferienheim__text wrapper--text">
+      <img class="ferienheim__img js-io enter appear--bottom" src="images/foto--ferienheim.jpg" alt="Ein Foto des Ferienheims in Vigiljoch.">
+      <div class="ferienheim__text wrapper--text js-io enter appear--bottom">
         <p>Das Ferienheim bietet für einen Großteil der Gäste einen Platz zum schlafen. Die Zimmer verfügen über <span class="highlight highlight--alt">4-8 Betten</span> und <span class="highlight highlight--alt">Gemeinschaftsbädern</span> und Warmwasser. Wer dort schläft, ist dem Geschehen am nächsten, mit allen Vor- und Nachteilen ;) Leider finden hier nicht alle Gäste Platz, daher freuen wir uns über Freiwillige, die auf die Family Alm ausweichen. Danke!</p>
       </div>
     </div>
     <div class="gampl">
-      <div class="accommodation__header accommodation__header--gampl wrapper--text">
+      <div class="accommodation__header accommodation__header--gampl wrapper--text js-io enter appear--bottom">
         <h3 class="accommodation__title">Gampl Family Alm</h3>
         <h4 class="accommodation__subtitle h5">Apartments zum Relaxen</h4>
         <a href="https://www.wirtshaus.it/de/gampl/" target="_blank" class="accomodation__btn btn btn--primary">Zur Website</a>
       </div>
-      <img class="gampl__img" src="images/foto--gampl.jpg" alt="Ein Foto der Gampl Family Alm.">
-      <div class="gampl__detail-imgs">
+      <img class="gampl__img js-io enter appear--bottom" src="images/foto--gampl.jpg" alt="Ein Foto der Gampl Family Alm.">
+      <div class="gampl__detail-imgs js-io enter appear--bottom">
         <img class="gampl__detail-img" src="images/foto--gampl-zimmer.jpg" alt="Schlafzimmer im Gampl.">
         <img class="gampl__detail-img" src="images/foto--gampl-wohnzimmer.jpg" alt="Wohnzimmer im Gampl.">
         <img class="gampl__detail-img" src="images/foto--gampl-bad.jpg" alt="Badezimmer im Gampl.">
       </div>
     </div>
-    <div class="gampl__text section--alt section--padded">
+    <div class="gampl__text section--alt section--padded js-io enter appear--bottom">
       <div class="wrapper--text">
         <p>Die in fünf Gehminuten zu erreichende Gampl Family Alm bietet <span class="highlight highlight--alt">7&nbsp;Apartments</span> für insgesamt ca. 30 Leute. Die Wohnungen haben 4-6 Betten (inkl. Schlafsofas), eine wahnsinnig tolle Aussicht und natürlich wesentlich mehr <span class="highlight highlight--alt">Privacy und Komfort</span> als das Ferienheim. Bitte versucht nicht selbst zu buchen sondern meldet euch bei uns. Wir haben alle verfügbaren Einheiten geblockt.</p>
       </div>
     </div>
 
     <div class="vigilius">
-      <div class="accommodation__header accommodation__header--vigilius wrapper--text">
+      <div class="accommodation__header accommodation__header--vigilius wrapper--text js-io enter appear--bottom">
         <h3 class="accommodation__title">Vigilius Mountain Luxusresort</h3>
         <h4 class="accommodation__subtitle h5">Upper Class Lodging</h4>
         <a href="https://www.vigilius.it/de" target="_blank" class="accomodation__btn btn btn--primary">Zur Website</a>
       </div>
-      <img class="vigilius__img" src="images/foto--vigilius.jpg" alt="Ein Foto des Vigilius Luxusresorts.">
+      <img class="vigilius__img js-io enter appear--bottom" src="images/foto--vigilius.jpg" alt="Ein Foto des Vigilius Luxusresorts.">
     </div>
 
-    <div class="wrapper--text">
+    <div class="wrapper--text js-io enter appear--bottom">
       <p>Etwa 50 Gehminuten entfernt gibt es noch eine weitere <span class="highlight">gehobene Übernachtungsmöglichkeit</span>. Das Hotel ist für seinen hohen Standard und dementsprechende Preise bekannt. Bitte bucht eigenständig und gebt uns einfach ein kurzes Update.</p>
     </div>
   </section>
-  <div class="wrapper--text">
+  <div class="wrapper--text js-io enter appear--bottom">
     {% include "divider.svg" %}
   </div>
   <section class="more section--padded">
-    <div class="section__header wrapper--text">
+    <div class="section__header wrapper--text js-io enter appear--bottom">
       <h2 class="section__subtitle h5">Was sind schon 5 Tage...</h2>
       <div class="section__title h2">Noch Urlaub übrig?</div>
     </div>
-    <div class="wrapper--text">
+    <div class="wrapper--text js-io enter appear--bottom">
       <p>Wenn ihr außerdem noch rumreisen oder einfach länger in Südtirol bleiben möchtet, gebt uns Bescheid und wir geben euch weitere Tipps zu Übernachtungsmöglichkeiten und Aktivitäten.</p>
     </div>
   </section>
   <section class="volunteering section section--alt section--padded">
-    <div class="wrapper--text">
+    <div class="wrapper--text js-io enter appear--bottom">
       <h2>Volunteering</h2>
       <h3>Artist Registration</h3>
       <p>Du hast Bock unser Festival <span class="highlight highlight--alt">künstlerisch</span> zu unterstützen? Ob auflegen, eigenes Instrument, deine Stimme oder mit Theater, Yoga oder oder oder... Wir freuen uns, wenn du dich einbringen willst. Hier sind deiner Fantasie keine Grenzen gesetzt, es muss nicht das Thema Hochzeit tragen, es soll nur dir und der Kolonie Spaß bringen!</p>
@@ -220,29 +220,29 @@ title: Luft & Liebe
   </section>
   <section class="presents section section--padded">
     <div class="video-container">
-      <video class="video" src="images/video.mp4" preload="none" autoplay loop playsinline>
+      <video class="video js-io" src="images/video2.mp4" preload="none" autoplay loop playsinline>
       </video>
     </div>
-    <div class="wrapper--text">
+    <div class="wrapper--text js-io enter appear--bottom">
       <h2>Geschenke</h2>
       <p>Unser größtes Geschenk ist es, dass du den Weg auf dich nimmst und dabei bist. Wenn du trotzdem etwas schenken magst, dann freuen wir uns über eine Spende für unseren anstehenden <span class="highlight">Road&nbsp;Trip</span>.</p>
       <p>Und solltet ihr doch etwas ganz anderes schenken wollen, dann meldet euch einfach beim Luft & Liebe Team (<a href="mailto:anne-marie.wassmuth@gmx.de">Anni</a>, <a href="mailto:christian@naegele.it">Chris</a>, <a href="mailto:naeflo@hotmail.com">Flo</a>).</p>
     </div>
   </section>
-  <div class="wrapper--text">
+  <div class="wrapper--text js-io enter appear--bottom">
     {% include "divider.svg" %}
   </div>
   <section class="activities section section--padded">
-    <div class="wrapper--text">
+    <div class="wrapper--text js-io enter appear--bottom">
       <h2>Freizeitaktivitäten</h2>
       <p>Es gibt zahlreiche wunderschöne Wanderwege, mal leichter, mal etwas schwieriger direkt vor der Haustür des Ferienheims. Also pack deine <span class="highlight">Wanderschuhe</span> und etwas Proviant ein, mach dich auf die Socken und erkunde die Natur!</p>
       <p>Für genügend <span class="highlight">Spiele</span>, ob drinnen oder draußen, ist gesorgt - lass dich einfach überraschen!</p>
     </div>
-  </section><div class="wrapper--text">
+  </section><div class="wrapper--text js-io enter appear--bottom">
     {% include "divider.svg" %}
   </div>
   <section class="photo section section--padded">
-    <div class="wrapper--text">
+    <div class="wrapper--text js-io enter appear--bottom">
       <h2>Fotografieren</h2>
       <p>Wir möchten euch bitten zur freien Trauung eure <span class="highlight highlight--alt">Handys und Kameras wegzupacken</span> und den Moment der Zeremonie voll und ganz zu genießen. Während des ganzen Tages werden sich <span class="highlight highlight--alt">professionelle Fotografen</span> um die Bilder kümmern, die wir gerne mit euch teilen werden.</p>
       <h2>Filmen</h2>
