--- a/src/index.njk
+++ b/src/index.njk
@@ -220,7 +220,7 @@ title: Luft & Liebe
   </section>
   <section class="presents section section--padded">
     <div class="video-container">
-      <video class="video js-io" src="images/video2.mp4" preload="none" autoplay loop playsinline>
+      <video class="video js-io" data-src="images/video2.mp4" autoplay loop playsinline>
       </video>
     </div>
     <div class="wrapper--text js-io enter appear--bottom">
