- fix no IO bug

--- a/src/index.njk
+++ b/src/index.njk
@@ -261,3 +261,11 @@ title: Luft & Liebe
     <div class="oiiiio">OIIIIO</div>
   </div>
 </footer>
+<noscript>
+  <style media="screen">
+    .no-js .appear--bottom {
+      opacity: 1;
+      transform: none;
+    }
+  </style>
+</noscript>
