- fix npm - change entrance animation for some elements

--- a/src/index.njk
+++ b/src/index.njk
@@ -34,7 +34,7 @@ title: Luft & Liebe
         </time>
       </div>
       <p class="first-letter js-io enter appear--bottom">5 Tage ausgelassen feiern, hoch oben auf dem Vigiljoch. Eine Auszeit nehmen vom Trubel des Alltags, etwas Bergluft schnuppern und mit uns am Samstag unsere Liebe zelebrieren. (Fast) alle unter einem Dach, ganz unkompliziert locker flockig erwarten wir euch ab Donnerstag Nachmittag im Ferienheim Vigiljoch, denn wir feiern ein Fest(ival) und freuen uns, dass du dabei bist und vielleicht auch etwas beitragen möchtest.</p>
-      <div class="registration">
+      <div class="registration enter appear--bottom">
         <a href="https://forms.gle/VCB9XgttZK9w6WWn7" target="_blank" class="btn btn--primary">Als Gast registrieren</a>
       </div>
     </div>
@@ -206,16 +206,16 @@ title: Luft & Liebe
     </div>
   </section>
   <section class="volunteering section section--alt section--padded">
-    <div class="wrapper--text js-io enter appear--bottom">
-      <h2>Volunteering</h2>
-      <h3>Artist Registration</h3>
-      <p>Du hast Bock unser Festival <span class="highlight highlight--alt">künstlerisch</span> zu unterstützen? Ob auflegen, eigenes Instrument, deine Stimme oder mit Theater, Yoga oder oder oder... Wir freuen uns, wenn du dich einbringen willst. Hier sind deiner Fantasie keine Grenzen gesetzt, es muss nicht das Thema Hochzeit tragen, es soll nur dir und der Kolonie Spaß bringen!</p>
-      <p><span class="highlight highlight--alt">Achtung:</span> solltest du irgend eine Einlage planen, von der wir nichts wissen sollen, dann wende dich bitte an das Luft & Liebe Team (<a href="mailto:anne-marie.wassmuth@gmx.de">Anni</a>, <a href="mailto:christian@naegele.it">Chris</a>, <a href="mailto:naeflo@hotmail.com">Flo</a>).</p>
-      <div class="registration">
+    <div class="wrapper--text">
+      <h2 class="js-io enter appear--bottom">Volunteering</h2>
+      <h3 class="js-io enter appear--bottom">Artist Registration</h3>
+      <p class="js-io enter appear--bottom">Du hast Bock unser Festival <span class="highlight highlight--alt">künstlerisch</span> zu unterstützen? Ob auflegen, eigenes Instrument, deine Stimme oder mit Theater, Yoga oder oder oder... Wir freuen uns, wenn du dich einbringen willst. Hier sind deiner Fantasie keine Grenzen gesetzt, es muss nicht das Thema Hochzeit tragen, es soll nur dir und der Kolonie Spaß bringen!</p>
+      <p class="js-io enter appear--bottom"><span class="highlight highlight--alt">Achtung:</span> solltest du irgend eine Einlage planen, von der wir nichts wissen sollen, dann wende dich bitte an das Luft & Liebe Team (<a href="mailto:anne-marie.wassmuth@gmx.de">Anni</a>, <a href="mailto:christian@naegele.it">Chris</a>, <a href="mailto:naeflo@hotmail.com">Flo</a>).</p>
+      <div class="registration js-io enter appear--bottom">
         <a href="https://forms.gle/vZNJUtvGt85ghkeW8" target="_blank" class="btn btn--primary">Als Artist registrieren</a>
       </div>
-      <h3>Support Workshops</h3>
-      <p>Du hast Lust an den Tagen vor dem Hauptakt tatkräftig anzupacken? Es gibt sicher noch einiges zu tun und wir können <span class="highlight highlight--alt">jede helfende Hand</span> brauchen, sei es beim Aufbau, in der Küche oder beim Feuer und Stockbrot machen.</p>
+      <h3 class="registration js-io enter appear--bottom">Support Workshops</h3>
+      <p class="registration js-io enter appear--bottom">Du hast Lust an den Tagen vor dem Hauptakt tatkräftig anzupacken? Es gibt sicher noch einiges zu tun und wir können <span class="highlight highlight--alt">jede helfende Hand</span> brauchen, sei es beim Aufbau, in der Küche oder beim Feuer und Stockbrot machen.</p>
     </div>
   </section>
   <section class="presents section section--padded">
