- improve entry animations

--- a/src/index.njk
+++ b/src/index.njk
@@ -63,18 +63,18 @@ title: Luft & Liebe
     </div>
   </section>
   <section id="js-approach" class="approach section section--alt section--padded js-io">
-    <div class="wrapper--text js-io enter appear--bottom">
-      <h2>Anfahrt nach Südtirol</h2>
-      <p>Wir sind uns bewusst, dass die Anreise nach Südtirol nicht die einfachste ist und wollen sie euch so angenehm wie möglich machen. Solltet ihr Schwierigkeiten haben um von A nach B zu kommen oder habt noch einen Platz im Auto frei, den ihr vergeben möchtet, dann gebt uns bitte Bescheid - wir finden für alles eine Lösung!</p>
+    <div class="wrapper--text">
+      <h2 class="js-io enter appear--bottom">Anfahrt nach Südtirol</h2>
+      <p class="js-io enter appear--bottom">Wir sind uns bewusst, dass die Anreise nach Südtirol nicht die einfachste ist und wollen sie euch so angenehm wie möglich machen. Solltet ihr Schwierigkeiten haben um von A nach B zu kommen oder habt noch einen Platz im Auto frei, den ihr vergeben möchtet, dann gebt uns bitte Bescheid - wir finden für alles eine Lösung!</p>
     </div>
-    <div class="img-overlay js-io enter appear--bottom">
-      <div class="img-overlay__img">
+    <div class="img-overlay">
+      <div class="img-overlay__img js-io enter appear--bottom">
         <img class="map map--is-visible" data-type="car" src="images/map--europe--car.jpg" alt="Eine handgezeichnete Landkarte Europas, die Autorouten nach Vigiljoch zeigt.">
         <img class="map" data-type="plane" src="images/map--europe--plane.jpg" alt="Eine handgezeichnete Landkarte Europas, die Flugrouten nach Vigiljoch zeigt.">
         <img class="map" data-type="train" src="images/map--europe--train.jpg" alt="Eine handgezeichnete Landkarte Europas, die Zugrouten nach Vigiljoch zeigt.">
       </div>
       <div class="img-overlay__overlay">
-        <div class="switch">
+        <div class="switch js-io enter appear--bottom">
           <input type="radio" name="transport" id="switch__car" class="switch__input" checked>
           <label for="switch__car" class="switch__btn" data-type="car">{% include "i--car.svg" %}</label>
 
@@ -85,31 +85,31 @@ title: Luft & Liebe
           <label for="switch__train" class="switch__btn" data-type="train">{% include "i--train.svg" %}</label>
         </div>
         <div class="img-overlay__content img-overlay__content--is-visible" data-type="car">
-          <h3>Mit dem Auto</h3>
+          <h3 class="js-io enter appear--bottom">Mit dem Auto</h3>
           <ul>
-            <li>Bitte versucht Fahrgemeinschaften zu bilden</li>
-            <li>Kostenlose Parkmöglichkeiten an der Schwebeseilbahn in Lana</li>
+            <li class="js-io enter appear--bottom">Bitte versucht Fahrgemeinschaften zu bilden</li>
+            <li class="js-io enter appear--bottom">Kostenlose Parkmöglichkeiten an der Schwebeseilbahn in Lana</li>
           </ul>
           <a href="images/map--europe--car.jpg" class="btn btn--primary">Karte anzeigen</a>
         </div>
         <div class="img-overlay__content" data-type="plane">
-          <h3>Mit dem Flugzeug</h3>
+          <h3 class="js-io enter appear--bottom">Mit dem Flugzeug</h3>
           <ul>
-            <li>Von Hamburg mit Ryanair nach Bergamo, Verona</li>
-            <li>Von Hamburg mit Lufthansa nach München</li>
-            <li>Von Berlin mit Ryanair nach Bergamo, München</li>
-            <li>Von Berlin mit Lufthansa nach München</li>
-            <li>Von Berlin mit easyjet nach Innsbruck, Malpensa</li>
-            <li>Von Wien mit Ryanair nach Bergamo</li>
-            <li>Von Wien mit Lufthansa nach Verona</li>
+            <li class="js-io enter appear--bottom">Von Hamburg mit Ryanair nach Bergamo, Verona</li>
+            <li class="js-io enter appear--bottom">Von Hamburg mit Lufthansa nach München</li>
+            <li class="js-io enter appear--bottom">Von Berlin mit Ryanair nach Bergamo, München</li>
+            <li class="js-io enter appear--bottom">Von Berlin mit Lufthansa nach München</li>
+            <li class="js-io enter appear--bottom">Von Berlin mit easyjet nach Innsbruck, Malpensa</li>
+            <li class="js-io enter appear--bottom">Von Wien mit Ryanair nach Bergamo</li>
+            <li class="js-io enter appear--bottom">Von Wien mit Lufthansa nach Verona</li>
           </ul>
           <a href="images/map--europe--plane.jpg" class="btn btn--primary">Karte anzeigen</a>
         </div>
         <div class="img-overlay__content" data-type="train">
-          <h3>Mit dem Zug</h3>
-          <ul>
-            <li>Mit ICE nach München</li>
-            <li>Von dort mit dem EC Richtung Bologna/Venezia/Verona bis nach Bozen</li>
+          <h3 class="js-io enter appear--bottom">Mit dem Zug</h3>
+          <ul class="js-io enter appear--bottom">
+            <li class="js-io enter appear--bottom">Mit ICE nach München</li>
+            <li class="js-io enter appear--bottom">Von dort mit dem EC Richtung Bologna/Venezia/Verona bis nach Bozen</li>
           </ul>
           <a href="images/map--europe--train.jpg" class="btn btn--primary">Karte anzeigen</a>
         </div>
@@ -157,36 +157,36 @@ title: Luft & Liebe
         <h4 class="accommodation__subtitle h5">Bettenlager</h4>
       </div>
       <img class="ferienheim__img js-io enter appear--bottom" src="images/foto--ferienheim.jpg" alt="Ein Foto des Ferienheims in Vigiljoch.">
-      <div class="ferienheim__text wrapper--text js-io enter appear--bottom">
-        <p>Das Ferienheim bietet für einen Großteil der Gäste einen Platz zum schlafen. Die Zimmer verfügen über <span class="highlight highlight--alt">4-8 Betten</span> und <span class="highlight highlight--alt">Gemeinschaftsbädern</span> und Warmwasser. Wer dort schläft, ist dem Geschehen am nächsten, mit allen Vor- und Nachteilen ;) Leider finden hier nicht alle Gäste Platz, daher freuen wir uns über Freiwillige, die auf die Family Alm ausweichen. Danke!</p>
+      <div class="ferienheim__text wrapper--text">
+        <p class="js-io enter appear--bottom">Das Ferienheim bietet für einen Großteil der Gäste einen Platz zum schlafen. Die Zimmer verfügen über <span class="highlight highlight--alt">4-8 Betten</span> und <span class="highlight highlight--alt">Gemeinschaftsbädern</span> und Warmwasser. Wer dort schläft, ist dem Geschehen am nächsten, mit allen Vor- und Nachteilen ;) Leider finden hier nicht alle Gäste Platz, daher freuen wir uns über Freiwillige, die auf die Family Alm ausweichen. Danke!</p>
       </div>
     </div>
     <div class="gampl">
-      <div class="accommodation__header accommodation__header--gampl wrapper--text js-io enter appear--bottom">
+      <div class="accommodation__header accommodation__header--gampl wrapper--text">
         <h3 class="accommodation__title">Gampl Family Alm</h3>
         <h4 class="accommodation__subtitle h5">Apartments zum Relaxen</h4>
         <a href="https://www.wirtshaus.it/de/gampl/" target="_blank" class="accomodation__btn btn btn--primary">Zur Website</a>
       </div>
-      <img class="gampl__img js-io enter appear--bottom" src="images/foto--gampl.jpg" alt="Ein Foto der Gampl Family Alm.">
-      <div class="gampl__detail-imgs js-io enter appear--bottom">
+      <img class="gampl__img" src="images/foto--gampl.jpg" alt="Ein Foto der Gampl Family Alm.">
+      <div class="gampl__detail-imgs">
         <img class="gampl__detail-img" src="images/foto--gampl-zimmer.jpg" alt="Schlafzimmer im Gampl.">
         <img class="gampl__detail-img" src="images/foto--gampl-wohnzimmer.jpg" alt="Wohnzimmer im Gampl.">
         <img class="gampl__detail-img" src="images/foto--gampl-bad.jpg" alt="Badezimmer im Gampl.">
       </div>
     </div>
-    <div class="gampl__text section--alt section--padded js-io enter appear--bottom">
-      <div class="wrapper--text">
+    <div class="gampl__text section--alt section--padded">
+      <div class="wrapper--text js-io enter appear--bottom">
         <p>Die in fünf Gehminuten zu erreichende Gampl Family Alm bietet <span class="highlight highlight--alt">7&nbsp;Apartments</span> für insgesamt ca. 30 Leute. Die Wohnungen haben 4-6 Betten (inkl. Schlafsofas), eine wahnsinnig tolle Aussicht und natürlich wesentlich mehr <span class="highlight highlight--alt">Privacy und Komfort</span> als das Ferienheim. Bitte versucht nicht selbst zu buchen sondern meldet euch bei uns. Wir haben alle verfügbaren Einheiten geblockt.</p>
       </div>
     </div>
 
     <div class="vigilius">
-      <div class="accommodation__header accommodation__header--vigilius wrapper--text js-io enter appear--bottom">
+      <div class="accommodation__header accommodation__header--vigilius wrapper--text">
         <h3 class="accommodation__title">Vigilius Mountain Luxusresort</h3>
         <h4 class="accommodation__subtitle h5">Upper Class Lodging</h4>
         <a href="https://www.vigilius.it/de" target="_blank" class="accomodation__btn btn btn--primary">Zur Website</a>
       </div>
-      <img class="vigilius__img js-io enter appear--bottom" src="images/foto--vigilius.jpg" alt="Ein Foto des Vigilius Luxusresorts.">
+      <img class="vigilius__img" src="images/foto--vigilius.jpg" alt="Ein Foto des Vigilius Luxusresorts.">
     </div>
 
     <div class="wrapper--text js-io enter appear--bottom">
@@ -197,9 +197,9 @@ title: Luft & Liebe
     {% include "divider.svg" %}
   </div>
   <section class="more section--padded">
-    <div class="section__header wrapper--text js-io enter appear--bottom">
-      <h2 class="section__subtitle h5">Was sind schon 5 Tage...</h2>
-      <div class="section__title h2">Noch Urlaub übrig?</div>
+    <div class="section__header wrapper--text">
+      <h2 class="section__subtitle h5 js-io enter appear--bottom">Was sind schon 5 Tage...</h2>
+      <div class="section__title h2 js-io enter appear--bottom">Noch Urlaub übrig?</div>
     </div>
     <div class="wrapper--text js-io enter appear--bottom">
       <p>Wenn ihr außerdem noch rumreisen oder einfach länger in Südtirol bleiben möchtet, gebt uns Bescheid und wir geben euch weitere Tipps zu Übernachtungsmöglichkeiten und Aktivitäten.</p>
@@ -223,30 +223,31 @@ title: Luft & Liebe
       <video class="video js-io" data-src="images/video2.mp4" autoplay loop playsinline>
       </video>
     </div>
-    <div class="wrapper--text js-io enter appear--bottom">
-      <h2>Geschenke</h2>
-      <p>Unser größtes Geschenk ist es, dass du den Weg auf dich nimmst und dabei bist. Wenn du trotzdem etwas schenken magst, dann freuen wir uns über eine Spende für unseren anstehenden <span class="highlight">Road&nbsp;Trip</span>.</p>
-      <p>Und solltet ihr doch etwas ganz anderes schenken wollen, dann meldet euch einfach beim Luft & Liebe Team (<a href="mailto:anne-marie.wassmuth@gmx.de">Anni</a>, <a href="mailto:christian@naegele.it">Chris</a>, <a href="mailto:naeflo@hotmail.com">Flo</a>).</p>
+    <div class="wrapper--text">
+      <h2 class="js-io enter appear--bottom">Geschenke</h2>
+      <p class="js-io enter appear--bottom">Unser größtes Geschenk ist es, dass du den Weg auf dich nimmst und dabei bist. Wenn du trotzdem etwas schenken magst, dann freuen wir uns über eine Spende für unseren anstehenden <span class="highlight">Road&nbsp;Trip</span>.</p>
+      <p class="js-io enter appear--bottom">Und solltet ihr doch etwas ganz anderes schenken wollen, dann meldet euch einfach beim Luft & Liebe Team (<a href="mailto:anne-marie.wassmuth@gmx.de">Anni</a>, <a href="mailto:christian@naegele.it">Chris</a>, <a href="mailto:naeflo@hotmail.com">Flo</a>).</p>
     </div>
   </section>
   <div class="wrapper--text js-io enter appear--bottom">
     {% include "divider.svg" %}
   </div>
   <section class="activities section section--padded">
-    <div class="wrapper--text js-io enter appear--bottom">
-      <h2>Freizeitaktivitäten</h2>
-      <p>Es gibt zahlreiche wunderschöne Wanderwege, mal leichter, mal etwas schwieriger direkt vor der Haustür des Ferienheims. Also pack deine <span class="highlight">Wanderschuhe</span> und etwas Proviant ein, mach dich auf die Socken und erkunde die Natur!</p>
-      <p>Für genügend <span class="highlight">Spiele</span>, ob drinnen oder draußen, ist gesorgt - lass dich einfach überraschen!</p>
+    <div class="wrapper--text">
+      <h2 class="js-io enter appear--bottom">Freizeitaktivitäten</h2>
+      <p class="js-io enter appear--bottom">Es gibt zahlreiche wunderschöne Wanderwege, mal leichter, mal etwas schwieriger direkt vor der Haustür des Ferienheims. Also pack deine <span class="highlight">Wanderschuhe</span> und etwas Proviant ein, mach dich auf die Socken und erkunde die Natur!</p>
+      <p class="js-io enter appear--bottom">Für genügend <span class="highlight">Spiele</span>, ob drinnen oder draußen, ist gesorgt - lass dich einfach überraschen!</p>
     </div>
-  </section><div class="wrapper--text js-io enter appear--bottom">
+  </section>
+  <div class="wrapper--text js-io enter appear--bottom">
     {% include "divider.svg" %}
   </div>
   <section class="photo section section--padded">
-    <div class="wrapper--text js-io enter appear--bottom">
-      <h2>Fotografieren</h2>
-      <p>Wir möchten euch bitten zur freien Trauung eure <span class="highlight highlight--alt">Handys und Kameras wegzupacken</span> und den Moment der Zeremonie voll und ganz zu genießen. Während des ganzen Tages werden sich <span class="highlight highlight--alt">professionelle Fotografen</span> um die Bilder kümmern, die wir gerne mit euch teilen werden.</p>
-      <h2>Filmen</h2>
-      <p>Wir würden gerne nach dem Event einen kurzen Film schneiden. Daher bitten wir alle, die eine <span class="highlight">GoPro</span> oder ähnliches Gerät besitzen, während der Tage <span class="highlight">(außer zur Trauung)</span> fleißig zu filmen. Wir sammeln dann das Rohmaterial und machen was schönes draus, das wir dann wieder mit euch teilen :)</p>
+    <div class="wrapper--text">
+      <h2 class="js-io enter appear--bottom">Fotografieren</h2>
+      <p class="js-io enter appear--bottom">Wir möchten euch bitten zur freien Trauung eure <span class="highlight highlight--alt">Handys und Kameras wegzupacken</span> und den Moment der Zeremonie voll und ganz zu genießen. Während des ganzen Tages werden sich <span class="highlight highlight--alt">professionelle Fotografen</span> um die Bilder kümmern, die wir gerne mit euch teilen werden.</p>
+      <h2 class="js-io enter appear--bottom">Filmen</h2>
+      <p class="js-io enter appear--bottom">Wir würden gerne nach dem Event einen kurzen Film schneiden. Daher bitten wir alle, die eine <span class="highlight">GoPro</span> oder ähnliches Gerät besitzen, während der Tage <span class="highlight">(außer zur Trauung)</span> fleißig zu filmen. Wir sammeln dann das Rohmaterial und machen was schönes draus, das wir dann wieder mit euch teilen :)</p>
     </div>
   </section>
 </main>
