- add no-js mode

--- a/src/index.njk
+++ b/src/index.njk
@@ -268,5 +268,10 @@ title: Luft & Liebe
       opacity: 1;
       transform: none;
     }
+
+    .no-js .char {
+      transform: scale(1);
+      opacity: 1;
+    }
   </style>
 </noscript>
