--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://use.typekit.net/xjh1lhw.css">
   <link rel="stylesheet" href="/styles/index.css">
 </head>
-<body id="top" itemscope itemtype="http://schema.org/WebPage">
+<body id="top" class="no-js" itemscope itemtype="http://schema.org/WebPage">
   {{ content | safe }}
   <script src="/scripts/index.js"></script>
 </body>
