--- a/src/index.njk
+++ b/src/index.njk
@@ -34,7 +34,7 @@ title: Luft & Liebe
         </time>
       </div>
       <p class="first-letter js-io enter appear--bottom">5 Tage ausgelassen feiern, hoch oben auf dem Vigiljoch. Eine Auszeit nehmen vom Trubel des Alltags, etwas Bergluft schnuppern und mit uns am Samstag unsere Liebe zelebrieren. (Fast) alle unter einem Dach, ganz unkompliziert locker flockig erwarten wir euch ab Donnerstag Nachmittag im Ferienheim Vigiljoch, denn wir feiern ein Fest(ival) und freuen uns, dass du dabei bist und vielleicht auch etwas beitragen möchtest.</p>
-      <div class="registration enter appear--bottom">
+      <div class="registration js-io enter appear--bottom">
         <a href="https://forms.gle/VCB9XgttZK9w6WWn7" target="_blank" class="btn btn--primary">Als Gast registrieren</a>
       </div>
     </div>
